src/test/ui/issue-17758.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-17758.rs:17:9
   |
LL |         self.foo();
   |         ^^^^

warning: not reporting region error due to nll
  --> $DIR/issue-17758.rs:17:14
   |
LL |         self.foo();
   |              ^^^

error: borrowed data escapes outside of function
  --> $DIR/issue-17758.rs:17:9
   |
LL |     fn bar(&self) {
   |            ----- `self` is a reference that is only valid in the function body
LL |         self.foo();
   |         ^^^^^^^^^^ `self` escapes the function body here

error: aborting due to previous error

